<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BlueToothActivity!</string>
    <string name="app_name">BlueTooth</string>
	<string name="confirm">Confirm</string>
	<string name="exit">EXIT</string>
	<string name="prompt">Quit</string>
	<string name="cancel">Cancel</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="up">Up</string>
	<string name="quit">Quit</string>
	<string name="play">Play</string>
	<string name="left_click">左键</string>
	<string name="right_click">右键</string>
	<string name="quit_msg">You really want to quit ?</string>
	<string name="getDevicesList">获取蓝牙设备列表</string>
</resources>